[tool.poetry]
name = "metrocode"
version = "0.1.0"
description = "Transforme seu código Python em um mapa interativo no terminal — igual ao mapa do metrô de São Paulo."
authors = ["RhogarDarkmor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.40.0"
networkx = "^3.0"
numpy = "^2.4.6"
scipy = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"